whitespace bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ form {
 
 p {
   color: #aaa;
+  white-space: nowrap;
 }
 
 input {
